--- a/jibao/pom.xml
+++ b/jibao/pom.xml
@@ -59,6 +59,20 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.20.1.ALL</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
