--- a/jibao/src/main/resources/application.yml
+++ b/jibao/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://124.70.206.207:3306/javaee?serverTimezone=GMT%2B8
+    url: jdbc:mysql://124.70.206.207:3306/javaee?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
     username: javaee
     password: 666666wW
     driver-class-name: com.mysql.cj.jdbc.Driver
