--- a/jibao/src/main/resources/application.yml
+++ b/jibao/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
   mail:
     default-encoding: utf-8
@@ -18,6 +20,13 @@ spring:
     password: KZQVRNDUKHIMJDVK
   mvc:
     static-path-pattern: /static/**
+
+  servlet:
+    multipart:
+      max-file-size:
+        10MB
+      max-request-size:
+        10MB
 
 
 expiredTime:
