--- a/jibao/pom.xml
+++ b/jibao/pom.xml
@@ -73,6 +73,10 @@
             <artifactId>jakarta.mail</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
 
