--- a/jibao/pom.xml
+++ b/jibao/pom.xml
@@ -81,6 +81,11 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 
 
