--- a/jibao/pom.xml
+++ b/jibao/pom.xml
@@ -87,7 +87,20 @@
             <version>1.4.0</version>
         </dependency>
     </dependencies>
-
-
-
+    <build>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <includes>
+                <include>**/*.*</include>
+            </includes>
+        </resource>
+        <resource>
+            <directory>src/main/resources/static/images</directory>
+            <includes>
+                <include>**/*.*</include>
+            </includes>
+        </resource>
+    </resources>
+    </build>
 </project>
