--- a/jibao/pom.xml
+++ b/jibao/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.20.1.ALL</version>
         </dependency>
+        <!-- fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.48</version>
+        </dependency>
         <dependency>
             <groupId>com.github.penggle</groupId>
             <artifactId>kaptcha</artifactId>
