--- a/jibao/src/main/resources/application.yml
+++ b/jibao/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 spring:
+  devtools:
+    restart:
+      # 开启热部署（更改文件后，自动重启）
+      enabled: true
+      ## 设置哪些资源变动后不触发热部署，会覆盖默认的exclude内容（资源不会触发重启，但会触发实时重新加载）
+      # exclude: WEB-INF/**,static/**
+      ## 监控额外的路径（优先于exclude）
+      # additional-paths: src/main/java
   datasource:
     url: jdbc:mysql://124.70.206.207:3306/javaee?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
     username: javaee
